--- a/classes/templates/classes/classes.html
+++ b/classes/templates/classes/classes.html
@@ -310,7 +310,7 @@ border-radius: 30px;
 
             <h4 class="haftomTitle">هفتم</h4>
 
-            <a class="hft1 mt-2"href="Sana-project-main/scores/templates/scores/create_Students.html">هفت یک</a>
+            <a class="hft1 mt-2"href="http://127.0.0.1:8000/scores/">هفت یک</a>
 
 
         </div>
