--- a/scores/templates/scores/create_Students.html
+++ b/scores/templates/scores/create_Students.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
  <style>
      @import url('https://fonts.googleapis.com/css2?family=Harmattan:wght@400;700&family=Ingrid+Darling&family=Lalezar&display=swap');
 body {
@@ -55,24 +55,25 @@ right: 0%;
 top: 0%;
 bottom: 87.7%;
 background: rgba(25, 106, 165, 0.75);
-
+height: 100px;
 }
 .recsabt{
   position: absolute;
 left: 0%;
 right: 0%;
-top: 13.88%;
+top: 13.08%;
 bottom: 78.42%;
 border: 0.5px solid #301934;
 background: rgba(191,176,210,0.8);
-
+width:1500px;
+height:85px;
 }
 .namein{
   position: absolute;
 left: 83.71%;
 right: 1.94%;
 top: 16.65%;
-bottom: 80.18%;
+bottom: 77.47%;
 
 font-family: 'Lalezar';
 font-style: normal;
@@ -87,7 +88,7 @@ color: #000000;
 left: 63.69%;
 right: 16.7%;
 top: 16.65%;
-bottom: 76.47%;
+bottom: 77.47%;
 
 
 background: #D9D9D9;
@@ -98,15 +99,15 @@ font-style: normal;
 font-weight: 400;
 font-size: 34px;
 line-height: 53px;
-text-align: right;
+text-align: center;
 padding: 0.5cm;
 }
 .enzebatin{
   position: absolute;
 left: 48.14%;
-right: 12.79%;
-top:16.65%;
-bottom: 80.18%;
+right: 28.79%;
+top: 16.65%;
+bottom: 77.47%;
 
 font-family: 'Lalezar';
 font-style: normal;
@@ -122,7 +123,7 @@ color: #000000;
 left: 36.29%;
 right: 52.46%;
 top: 16.65%;
-bottom: 76.47%;
+bottom: 77.47%;
 
 background: #D9D9D9;
 border-radius: 30px;
@@ -153,22 +154,24 @@ font-style: normal;
 font-weight: 400;
 font-size: 34px;
 line-height: 53px;
-background: rgba(205, 78, 43, 0.87);
+background: rgba(30, 133, 41);
 border-radius: 61px;
 }
 .rechazf{
   position: absolute;
 left: 0%;
 right: 0%;
-top: 25.88%;
+top: 24.28%;
 bottom: 69.04%;
 border: 0.5px solid #301934;
 background: rgba(191,176,210,0.8);
+width:1500px;
+height:85px;
 }
 .nameout{
   position: absolute;
-left: 83.71%;
-right: 1.94%;
+left: 80.71%;
+right: 3.94%;
 top: 27.85%;
 bottom: 71.97%;
 
@@ -183,7 +186,7 @@ color: #000000;
 .nameoutbox{
   position: absolute;
   left: 63.69%;
-  right: 16.7%;
+  right: 19.7%;
   top: 27.85%;
   bottom: 65% ;
 
@@ -211,7 +214,7 @@ position: absolute;
 width: 119px;
 height: 66px;
 left: 783px;
-top: 78px;
+top: 8px;
 
 color: #000000;
 font-family: 'Lalezar';
@@ -227,7 +230,7 @@ border-radius: 61px;
   position: absolute;
 left: 16.63%;
 right: 18.23%;
-top: 43.69%;
+top: 38.69%;
 bottom: -40%;
 background: rgba(164, 187, 197, 0.88);
 border-radius: 30px;
@@ -258,7 +261,7 @@ position: absolute;
 width: 295px;
 height: 54px;
 left: 751px;
-top: 336px;
+top: 306px;
 
 background: rgba(205, 78, 43, 0.5);
 border-radius: 30px;
@@ -289,7 +292,7 @@ position: absolute;
 width: 224px;
 height: 54px;
 left: 345px;
-top: 336px;
+top: 306px;
 
 background: rgba(205, 78, 43, 0.5);
 border-radius: 30px;
@@ -305,15 +308,16 @@ border-radius: 30px;
   position: absolute;
   width: 119px;
   height: 66px;
-  left: 111px;
-  top: 829px;
-  color: #000000;
+  left: 271px;
+  top: 190px;
+  color: #ffffff;
   font-family: 'Lalezar';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 33px;
-  background: rgba(205, 78, 43, 0.87);
+  background: rgba(144, 103, 173
+);
   border-radius: 61px;
 
 }
@@ -329,34 +333,42 @@ border-radius: 30px;
   width: 119px;
   height: 66px;
   left: 111px;
-  top: 929px;
-  color: #000000;
+  top: 190px;
+  color: #ffffff;
   font-family: 'Lalezar';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 33px;
-  background: rgba(205, 78, 43, 0.87);
+
+  background: #000000;
   border-radius: 61px;
+  /* فاصله دلخواه بین ستون‌ها */
 
 }
 .showscore{
   width: 124px;
 height: 50px;
-
+<!--direction: middle;-->
+position: absolute;
+<!--width: 224px;-->
+<!--height: 54px;-->
+  /* فاصله دلخواه بین ستون‌ها */
+padding: 10px;
 
 
 
 /* Inside auto layout */
-
+display:flex;
+flex-direction:column;
 flex: none;
 order: 0;
 flex-grow: 0;
 
-position: absolute;
-left: 30.15%;
-right: 59.6%;
-top: 27.66%;
+<!--position:absolute;-->
+left:130.15%;
+right: 1159.6%;
+top: 7.66%;
 bottom: 47.46%;
 
 background: #D9D9D9;
@@ -366,37 +378,63 @@ font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 50px;
-
+text-align: center;
 color: #000000;
 }
 .showname{
   width: 195px;
 height: 50px;
-
-
+direction: rtl;
+z-index: 999;
+padding: 10px;
 
 /* Inside auto layout */
 
 flex: none;
 order: 0;
 flex-grow: 0;
-position: absolute;
-left: 50.94%;
-right: 23.7%;
-top: 67.66%;
-bottom: 47.46%;
 
-background: #D9D9D9;
+left: 1150px;
+right: 80px;
+margin-top: 1167.66px;
+bottom: 47.46px;
+
+
 border-radius: 30px;
 font-family: 'Lalezar';
 font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 50px;
-
+text-align:center;
+background: #D9D9D9;
 color: #000000;
+ /* فاصله دلخواه بین ستون‌ها */
+
 
 }
+.info2{
+position:absolute;
+left: 16.63%;
+right: 26.23%;
+top: 50.69%;
+bottom: -40%;
+ direction: rtl;
+
+}
+.info{
+position:absolute;
+left: 16.63%;
+right: 57.23%;
+top: 50.69%;
+bottom: -40%;
+ direction: rtl;
+}
+. td {
+    padding: 10px;  /* فاصله دلخواه بین ستون‌ها */
+    text-align: right;
+  }
+
 
  </style>
 <head>
@@ -412,10 +450,11 @@ color: #000000;
 <img class="bck" src="/media/background.png" width="1500" width="100%" alt="">
 
     </div>
+    <div class="rec5" >  </div>
     <div><!--header-->
-        <img  class="rec5" src="/media/Rectangle 5.png" width="1500" height="100" alt="">
+
         <h3 class="haft1">هفتم یک</h3>
-      <img  class="logo" src="/media/LOGO3-removebg 1.png" width="186" height="187" alt="">
+      <img  class="logo" src="/media/LOGO3-removebg.png" width="186" height="187" alt="">
      
     </div>
 
@@ -427,49 +466,85 @@ color: #000000;
 
 
     <label class="namein"> :نام و نام خانوادگی</label>
-    <h5  class="nameinbox">{{ form.name }}</h5>
-
+    <input class="nameinbox"  autocomplete="off" class="form-style" {{ form.name }} >
 
      </div>
 
 <div><!--enzebat-->
 
     <label class="enzebatin">:نمره انضباط</label>
-    <h5 class="enzebatinbox"> {{ form.score }} </h5>
 
+<input class="enzebatinbox"  autocomplete="off" class="form-style" {{ form.score }} >
 </div>
 
 <input  class="sabtbtn"type="submit" value="ثبت" >
-  </form>
     </div>
-    <form action="">
+        </div>
+    </form>
+
+
+
     <div class="rechazf"  width="1500" height="85"><!--hazf-->
-        {% csrf_token %}
+
         <form action="{% url 'scores:delete' %}" method="POST">
+            {% csrf_token %}
             <label class="nameout">:نام و نام خانوادگی</label>
-            <h5  class="nameoutbox">  {{ form.name }}  </h5>
+            <input class="nameoutbox"  autocomplete="off" class="form-style" {{ form.name }} >
             <input class="hazfbtn" type="submit" value="حذف">
-             </div>
+        </form>
+    </div>
        </div>
-   </form>
+
    <div class="recshow"><!--background show information-->
    </div>
    <div><!--show information-->
- <form>
-     {% csrf_token %}
-  <ul id="student">
+       <table>
+  <thead>
+    <tr>
+      <th class="nameshow">نام و نام خانوادگی</th>
 
-      <li class="nameshow">نام و نام خانوادگی</li>
-        <li class="scoreshow">نمره انظباط</li>
-
+    </tr>
+  </thead>
+  <tbody class="info2">
 
       {% for student in students|dictsort:"name" %}
-            <li class="showname" >  {{student.name}}</li>
-            <li class="showscore" >  {{student.score}}</li>
-      {% endfor %}
 
-  </ul>
- </form>
+      <tr >
+
+
+        <td class="showname" >{{student.name}}</td>
+
+
+      </tr>
+
+    {% endfor %}
+
+  </tbody>
+</table>
+  </div>
+       <div><!--show information-->
+       <table>
+  <thead>
+    <tr>
+
+      <th class="scoreshow">نمره انضباط</th>
+    </tr>
+  </thead>
+  <tbody class="info">
+
+      {% for student in students|dictsort:"name" %}
+
+      <tr >
+
+
+        <td class="showname">{{student.score}}</td>
+
+      </tr>
+
+    {% endfor %}
+
+  </tbody>
+</table>
   </div>
   {% if user.is_authenticated %}
   <form action='{% url "scores:print" %}' method="POST"><!--printlist-->
@@ -477,11 +552,12 @@ color: #000000;
     <button class='btnbtn-link'>چاپ لیست</button>
 </form>
 {% endif %}
+    <div>
 <form action='{% url "accounts:logout" %}' method="POST"><!--signout-->
     {% csrf_token %}
     <button class='btn-link'>خروج</button>
 </form>
-
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
  </body>
 </html>
