--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,5 @@
 {% load static %}
 <html lang="fa">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +12,6 @@
 </head>
 
 <body>
-
     <div class="section">
         <div class="container">
             <div class="row full-height justify-content-center">
@@ -28,26 +26,20 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">ورود</h4>
                                             <form action="" method="POST">
-       {{ form.non_field_errors }}
-
-    <div class="form-group" >
-
-<label form="{{ form.username.id_for_label }}"></label>
-        <input placeholder="نام کاربری"  autocomplete="off" class="form-style"
-              {{ form.username}} {{ form.username.errors }} >
-        <i class="input-icon uil uil-at"></i>
-
-    </div>
-    <div class="form-group mt-3">
-
-        <label form="{{ form.password.id_for_label }}"></label>
-        <input placeholder="رمز عبور"  autocomplete="off" class="form-style"
-               {{ form.password }} {{ form.password.errors }} >
-        <i class="input-icon uil uil-lock-alt"></i>
-    </div>
-        {% csrf_token%}
-    <button type="submit" class="btn mt-4">تایید</button>
-</form>
+                                                {{ form.non_field_errors }}
+                                                <div class="form-group" >
+                                                    <label for="{{ form.username.id_for_label }}"></label>
+                                                    <input placeholder="نام کاربری" autocomplete="off" class="form-style" {{ form.username }} {{ form.username.errors }}>
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-3">
+                                                    <label for="{{ form.password.id_for_label }}"></label>
+                                                    <input placeholder="رمز عبور" autocomplete="off" class="form-style" {{ form.password }} {{ form.password.errors }}>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                {% csrf_token %}
+                                                <button type="submit" class="btn mt-4">تایید</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
